🐛 Fix editParticle method name, and lacked fields
